--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a href="./index.html" class="link site-nav">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link site-nav">Portfolio</a>
+              <a href="./portfolio.html" class="link site-nav current"
+                >Portfolio</a
+              >
             </li>
             <li class="item">
               <a href="" class="link site-nav">Contacts</a>
@@ -258,5 +260,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
