--- a/portfolio.html
+++ b/portfolio.html
@@ -84,12 +84,19 @@
           <ul class="portfolio-cards list">
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/11.jpg"
-                  alt="app"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/11.jpg"
+                    alt="app"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Banking App Interface Concept</h2>
                   <p class="row-p">App</p>
@@ -98,12 +105,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/22.jpg"
-                  alt="paying_with_telefon"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/22.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Cashless Payment</h2>
                   <p class="row-p">Marketing</p>
@@ -112,12 +126,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/33.jpg"
-                  alt="laptop"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/33.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Meditation App</h2>
                   <p class="row-p">App</p>
@@ -126,12 +147,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/44.jpg"
-                  alt="driving_in_the_car"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/44.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Taxi Service</h2>
                   <p class="row-p">Marketing</p>
@@ -140,12 +168,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/55.jpg"
-                  alt="phone_wallpapers"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/55.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Screen Illustrations</h2>
                   <p class="row-p">Design</p>
@@ -154,12 +189,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/66.jpg"
-                  alt="girl_listen_music"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/66.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Online Courses</h2>
                   <p class="row-p">Marketing</p>
@@ -168,12 +210,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/77.jpg"
-                  alt="instagram_contents"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/77.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Instagram Stories Concept</h2>
                   <p class="row-p">Design</p>
@@ -182,12 +231,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/88.jpg"
-                  alt="go_to_the_shop"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/88.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Organic Food</h2>
                   <p class="row-p">Web Site</p>
@@ -196,12 +252,19 @@
             </li>
             <li class="cards-li">
               <a href="" class="link cards-link">
-                <img
-                  class="block"
-                  src="./images/99.jpg"
-                  alt="a_cup_of_coffe"
-                  width="360"
-                />
+                <div class="overlay-div">
+                  <img
+                    class="block"
+                    src="./images/99.jpg"
+                    alt="paying_with_telefon"
+                    width="360"
+                  />
+                  <p class="overlay-card">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="cards-info">
                   <h2 class="row-h">Fresh Coffee</h2>
                   <p class="row-p">Web Site</p>
