--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close class="button-modal" type="button">
-          <svg class="vektor" width="8" height="8">
+          <svg class="vector" width="8" height="8">
             <use href="./images/icons.svg#icon-vector"></use>
           </svg>
         </button>
